# tdrust

./: .pymon  Cargo.toml  Justfile  pyproject.toml  sandbox.ipynb
docs/: README.md
src/: lib.rs  main.rs
tests/: conftest.py  test_append.py  test_cdf.py
