[package]
name = "tdrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tdrust"
crate-type = ["cdylib"]

[dependencies]
log = "0.4.21"
numpy = "0.23.0"
pyo3 = "0.23.4"
pyo3-build-config = "0.23.4"
rayon = "1.10.0"
